[gd_scene load_steps=4 format=2]

[ext_resource path="res://main_game/Obstacles/RockObstacle.gd" type="Script" id=1]
[ext_resource path="res://main_game/Obstacles/obstacle.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 171, 92 )

[node name="RockObstacle" type="Area2D" groups=[
"obstacles",
]]

z_index = 3
z_as_relative = false
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Pickable", "Z Index" ]
deceleration_multiplyer = 36

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionArea" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="VisibilityCheck" type="VisibilityNotifier2D" parent="." index="2"]

position = Vector2( -1.00001, -2 )
scale = Vector2( 17.7, 9.5 )
rect = Rect2( -10, -10, 20, 20 )

[connection signal="body_entered" from="." to="." method="_on_RockObstacle_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_RockObstacle_body_exited"]

[connection signal="screen_entered" from="VisibilityCheck" to="." method="_on_VisibilityNotifier2D_screen_entered"]

[connection signal="screen_exited" from="VisibilityCheck" to="." method="_on_VisibilityNotifier2D_screen_exited"]


